examples/sample-product-chart/chart-test/reports/scenario-gateway-api-contour-gateway-api-route-precedence-20260531-184455/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-31T22:45:29Z"
    labels:
      gateway.networking.k8s.io/gateway-name: sample-gw
      projectcontour.io/owning-gateway-name: sample-gw
    name: contour-sample-gw
    namespace: sample
    resourceVersion: "672"
    uid: daa42bfb-88c8-4a49-8f5d-e57099db79a8
  spec:
    clusterIP: 10.96.10.105
    clusterIPs:
    - 10.96.10.105
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: xds
      port: 8001
      protocol: TCP
      targetPort: 8001
    selector:
      app: contour-sample-gw
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-05-31T22:45:29Z"
    labels:
      gateway.networking.k8s.io/gateway-name: sample-gw
      projectcontour.io/owning-gateway-name: sample-gw
    name: envoy-sample-gw
    namespace: sample
    resourceVersion: "678"
    uid: b57a9fa1-e685-4314-a886-3a869956cf15
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.184.202
    clusterIPs:
    - 10.96.184.202
    externalTrafficPolicy: Local
    healthCheckNodePort: 32341
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-80
      nodePort: 32037
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: envoy-sample-gw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-05-31T22:45:23Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "576"
    uid: 46f09546-8309-4bd4-8ff6-6c804f9329f7
  spec:
    clusterIP: 10.96.1.107
    clusterIPs:
    - 10.96.1.107
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
